food-inventory-saas/debug-output.txt
[dotenv@17.2.2] injecting env (59) from .env -- tip: 📡 version env with Radar: https://dotenvx.com/radar
/Users/jualfelsantamaria/Documents/Saas/V1.03/FOOD-INVENTORY-SAAS-COMPLETO/food-inventory-saas/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/chat/chat.service.ts(662,9): error TS2322: Type 'UserDocument | null' is not assignable to type 'null'.
  Type 'UserDocument' is not assignable to type 'null'.
src/chat/chat.service.ts(664,89): error TS2339: Property 'firstName' does not exist on type 'never'.

    at createTSError (/Users/jualfelsantamaria/Documents/Saas/V1.03/FOOD-INVENTORY-SAAS-COMPLETO/food-inventory-saas/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/jualfelsantamaria/Documents/Saas/V1.03/FOOD-INVENTORY-SAAS-COMPLETO/food-inventory-saas/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/jualfelsantamaria/Documents/Saas/V1.03/FOOD-INVENTORY-SAAS-COMPLETO/food-inventory-saas/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/jualfelsantamaria/Documents/Saas/V1.03/FOOD-INVENTORY-SAAS-COMPLETO/food-inventory-saas/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/jualfelsantamaria/Documents/Saas/V1.03/FOOD-INVENTORY-SAAS-COMPLETO/food-inventory-saas/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1820:10
    at Object.require.extensions.<computed> [as .ts] (/Users/jualfelsantamaria/Documents/Saas/V1.03/FOOD-INVENTORY-SAAS-COMPLETO/food-inventory-saas/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1423:32)
    at Function._load (node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2322, 2339 ]
}
